<resources>
    <string name="app_name">League Score</string>
    <string name="txt_login">Login</string>
    <string name="txt_Email">Email</string>
    <string name="txt_Password">Password</string>
    <string name="txt_SignUp">Sign up</string>
    <string name="txt_or">or</string>
    <string name="txt_copyright">Copyright @League Score 2021</string>
    <string name="txt_Name">Name</string>
    <string name="txt_CnfPassword">Confirm Password</string>
    <string name="txt_ContactNo">Contact No</string>
    <string name="txt_riotid">Riot Id</string>
    <string name="title_activity_pro_match_list">ProMatchListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>